--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma-mocha": "~0.1.0",
     "karma-qunit": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
+    "karma-sinon-chai": "^0.2.0",
     "karma-coverage": "~0.1.0"
   },
   "peerDependencies": {
