--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jasmine": "~1.3.1",
     "mocha": "~1.13.0",
     "chai": "~1.8.0",
+    "sinon-chai": "~2.6.0",
     "sinon": "~1.7.3"
   },
   "version": "0.1.0"
