point has modified

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "raphael": "~2.1.2"
+    "raphael": "~2.1.2",
+    "sinon-chai": "~2.6.0"
   }
 }
