--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "raphael": "~2.1.2",
-    "sinon-chai": "~2.6.0"
+    "sinon-chai": "~2.6.0",
+    "snap.svg": "~0.3.0"
   }
 }
